nac3parser/src/snapshots/nac3parser__parser__tests__parse_lambda.snap
---
source: nac3parser/src/parser.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 1,
            file: FileName(
                "unknown",
            ),
        },
        custom: (),
        node: Expr {
            value: Located {
                location: Location {
                    row: 1,
                    column: 1,
                    file: FileName(
                        "unknown",
                    ),
                },
                custom: (),
                node: Lambda {
                    args: Arguments {
                        posonlyargs: [],
                        args: [
                            Located {
                                location: Location {
                                    row: 1,
                                    column: 8,
                                    file: FileName(
                                        "unknown",
                                    ),
                                },
                                custom: (),
                                node: ArgData {
                                    arg: "x",
                                    annotation: None,
                                },
                            },
                            Located {
                                location: Location {
                                    row: 1,
                                    column: 11,
                                    file: FileName(
                                        "unknown",
                                    ),
                                },
                                custom: (),
                                node: ArgData {
                                    arg: "y",
                                    annotation: None,
                                },
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kw_defaults: [],
                        kwarg: None,
                        defaults: [],
                    },
                    body: Located {
                        location: Location {
                            row: 1,
                            column: 16,
                            file: FileName(
                                "unknown",
                            ),
                        },
                        custom: (),
                        node: BinOp {
                            left: Located {
                                location: Location {
                                    row: 1,
                                    column: 14,
                                    file: FileName(
                                        "unknown",
                                    ),
                                },
                                custom: (),
                                node: Name {
                                    id: "x",
                                    ctx: Load,
                                },
                            },
                            op: Mult,
                            right: Located {
                                location: Location {
                                    row: 1,
                                    column: 18,
                                    file: FileName(
                                        "unknown",
                                    ),
                                },
                                custom: (),
                                node: Name {
                                    id: "y",
                                    ctx: Load,
                                },
                            },
                        },
                    },
                },
            },
            config_comment: [],
        },
    },
]
