nac3parser/src/snapshots/nac3parser__parser__tests__parse_tuples.snap
---
source: nac3parser/src/parser.rs
expression: "parse_program(source, FileName::default()).unwrap()"
---
[
    Located {
        location: Location {
            row: 1,
            column: 1,
            file: FileName(
                "unknown",
            ),
        },
        custom: (),
        node: Assign {
            targets: [
                Located {
                    location: Location {
                        row: 1,
                        column: 1,
                        file: FileName(
                            "unknown",
                        ),
                    },
                    custom: (),
                    node: Tuple {
                        elts: [
                            Located {
                                location: Location {
                                    row: 1,
                                    column: 1,
                                    file: FileName(
                                        "unknown",
                                    ),
                                },
                                custom: (),
                                node: Name {
                                    id: "a",
                                    ctx: Load,
                                },
                            },
                            Located {
                                location: Location {
                                    row: 1,
                                    column: 4,
                                    file: FileName(
                                        "unknown",
                                    ),
                                },
                                custom: (),
                                node: Name {
                                    id: "b",
                                    ctx: Load,
                                },
                            },
                        ],
                        ctx: Load,
                    },
                },
            ],
            value: Located {
                location: Location {
                    row: 1,
                    column: 8,
                    file: FileName(
                        "unknown",
                    ),
                },
                custom: (),
                node: Tuple {
                    elts: [
                        Located {
                            location: Location {
                                row: 1,
                                column: 8,
                                file: FileName(
                                    "unknown",
                                ),
                            },
                            custom: (),
                            node: Constant {
                                value: Int(
                                    4,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            location: Location {
                                row: 1,
                                column: 11,
                                file: FileName(
                                    "unknown",
                                ),
                            },
                            custom: (),
                            node: Constant {
                                value: Int(
                                    5,
                                ),
                                kind: None,
                            },
                        },
                    ],
                    ctx: Load,
                },
            },
            config_comment: [],
        },
    },
]
